# Sol_OS

./: Cargo.toml  makefile  x86_64-sol_os.json
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm
