[package]
name = "sol_os"
version = "0.1.0"
authors = ["Stian Soltvedt <soltvedt.stian@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0.*"
volatile = "0.2.*"
spin = "0.4.*"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"